refactor: SecurityConfig